<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EBA2</string>
    <string name="already_connect">Currently connected to the device, determine the disconnect?</string>
    <string name="tip">Tip</string>
    <string name="device_connected_title">connecting blue device</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="eba">EBA2</string>
    <string name="test">TEST APP</string>
    <string name="led">LED</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="motor">MOTOR</string>
    <string name="battery_level">BATTERY_LEVEL</string>
    <string name="empty">EMPTY</string>
    <string name="full">FULL</string>
    <string name="unknown_device">Unknown device</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="ok">OK</string>
     <string name="scan">scanning</string>
    <string name="scanner">Scanning</string>
    <string name="long_key">SWITCH\n...\nLONG</string>
    <string name="ble_dis_connected">Blue device is disconnected</string>
     <string name="disconnect">Disconnect\n...\n</string>
    <string name="short_key">SWITCH\n...\nSHORT</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

</resources>