<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="60" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eba"
                android:textColor="@android:color/white"
                android:textSize="@dimen/txt_size_50"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test"
                android:textColor="@android:color/white"
                android:textSize="@dimen/txt_size_20" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="18dp"
            android:layout_marginRight="25dp"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_set"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/setting_button_grey" />

            <TextView
                android:id="@+id/tv_device_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/txt_size_20"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="40"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/ll_led"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="80"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/ll_led_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="25dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/led"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/txt_size_20"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_led_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="25dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_on"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/on"
                    android:textColor="@android:color/white" />

                <CheckBox
                    android:id="@+id/cb_led"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:button="@drawable/cb_switch" />

                <TextView
                    android:id="@+id/tv_off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/off"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ll_motor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="80"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/ll_motor_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="25dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/motor"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/txt_size_20"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_motor_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="25dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/btn_motor_on"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/on"
                    android:textColor="@android:color/white" />

                <CheckBox
                    android:id="@+id/cb_motor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:button="@drawable/cb_switch" />

                <TextView
                    android:id="@+id/btn_motor_off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/off"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_battery"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="40"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/ll_battery_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/battery_level"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/txt_size_20"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_battery_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tv_empty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:text="@string/empty"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/tv_full"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/full"
                        android:textColor="@android:color/white" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <ProgressBar
                        android:id="@+id/pb_battery"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="280dp"
                        android:layout_height="6dp"
                        android:layout_marginTop="10dp"
                        android:background="@null"
                        android:max="100"
                        android:progress="0"
                        android:progressDrawable="@drawable/pb_progress" />

                    <TextView
                        android:id="@+id/tv_battery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="right"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/txt_size_15" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>